tests/bad/testSyntaxMissingRParen.grace
// Error: Expected ')' after print expression
print("hello" 